tests/negative/lockfreequeue_zero_cap.far
fun main() -> i64 {
  q = LockFreeQueue<i64>(0)
  return 0
}
